infra/k8s/auth-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: vssadique123/auth_service:v0.2
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "192Mi"    # Reduced from 256Mi
              cpu: "150m"        # Reduced from 200m
            limits:
              memory: "384Mi"    # Reduced from 512Mi
              cpu: "300m"
