infra/k8s/connection-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: connection-service
spec:
  selector:
    app: connection-service
  type: ClusterIP
  ports:
    - port: 8003
      targetPort: 8003
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connection-service
  labels:
    app: connection-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connection-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: connection-service
    spec:
      containers:
        - name: connection-service
          image: vssadique123/musify_connection:test10
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
        - name: kafka-consumer-connection
          image: vssadique123/musify_connection:test10
          command: ["python", "manage.py", "start_kafka_consumer"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
