infra/k8s/content-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: content-service
spec:
  selector:
    app: content-service
  type: ClusterIP
  ports:
    - port: 8002
      targetPort: 8002
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service
  labels:
    app: content-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: content-service
    spec:
      containers:
        - name: content-service
          image: vssadique123/musify_content:v0.2
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
        - name: kafka-consumer-content
          image: vssadique123/musify_content:v0.1
          command: ["python", "manage.py", "start_kafka_consumer"]
          resources:
            requests:
              memory: "192Mi"    # Reduced from 256Mi
              cpu: "150m"        # Reduced from 200m
            limits:
              memory: "384Mi"    # Reduced from 512Mi
              cpu: "300m"
