infra/k8s/gateway-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  type: ClusterIP
  ports:
    - port: 8000           
      targetPort: 8000     
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: vssadique123/musify_gateway:v0.9
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: sqlite-data
              mountPath: /app/db
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: sqlite-data
          persistentVolumeClaim:
            claimName: gateway-sqlite-data
